--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,12 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-}
+//plugins {
+//    id 'com.android.application'
+//    id 'kotlin-android'
+//
+//}
+apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 30
@@ -30,6 +35,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    externalNativeBuild {
+        cmake {
+            path "CMakeLists.txt"
+        }
+    }
 }
 
 dependencies {
@@ -45,4 +56,11 @@ dependencies {
 
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+
+    //GSON
+//    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    // fragment-ktx
+    implementation 'androidx.fragment:fragment-ktx:1.3.2'
 }
