--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,7 @@ dependencies {
 
     // fragment-ktx
     implementation 'androidx.fragment:fragment-ktx:1.3.2'
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 }
