--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,14 +56,21 @@ dependencies {
 
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-
-    //GSON
-//    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.0'
 
     // fragment-ktx
     implementation 'androidx.fragment:fragment-ktx:1.3.2'
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+    // RXAndroid
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+
+    // RXKotlin
+    implementation("io.reactivex.rxjava2:rxkotlin:2.1.0")
+
+    // RoundImageView
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
