--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,8 +62,14 @@ dependencies {
     // fragment-ktx
     implementation 'androidx.fragment:fragment-ktx:1.3.2'
 
+    // RecyclerViewSwipeDecorator
+    implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.3'
+
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+    // Glide Transformations
+    implementation 'jp.wasabeef:glide-transformations:4.3.0'
 
     // RXAndroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
